# routes/recipes.js
@@ -1,6 +1,7 @@
 var express = require("express");
 var router = express.Router();
 const recipes_utils = require("./utils/recipes_utils");
+const user_utils = require("./utils/user_utils")
 
 // router.get("/", (req, res) => res.send("im here"));
 
@@ -52,11 +53,14 @@ router.get("/extendInfo/:recipe_id", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
     const recipe = await recipes_utils.presentRecipe(req.params.recipe_id, user_id);
+    await user_utils.markAsSeen(user_id, req.params.recipe_id);
     res.send(recipe);
   } catch (error) {
     next(error);
   }
 });
+
+
 
 
 
